<resources>
    <string name="app_name">Crime Pitesti</string>
    <string name="category">Category</string>
    <string name="date_of_incident">Date of incident</string>
    <string name="details">Details</string>
    <string name="reported_police">Reported to police</string>
    <string name="send">Send</string>
    <string name="location">Location</string>
    <string name="error_place_not_set">Place not set</string>
    <string name="error_category_not_set">Category not set</string>
    <string name="error_date_not_set">Date not set</string>
    <string name="error_empty_description">Empty description</string>
    <string name="event_sent">Event sent</string>
    <string name="filter">Filter</string>
    <string name="add">Add</string>
    <string name="start_date">Start date</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="end_date">End date</string>
</resources>
