<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium">

        <TextView
            android:id="@+id/label_start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:text="@string/start_date"
            app:layout_constraintBottom_toTopOf="@id/text_start_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/text_start_date"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:gravity="center|start"
            android:text="@string/pick_a_date"
            app:layout_constraintBottom_toTopOf="@id/label_end_date"
            app:layout_constraintEnd_toStartOf="@id/image_start_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_start_date" />

        <ImageView
            android:id="@+id/image_start_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_medium"
            android:src="@drawable/ic_close_black_24dp"
            app:layout_constraintBottom_toBottomOf="@id/text_start_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_start_date" />

        <TextView
            android:id="@+id/label_end_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:text="@string/end_date"
            app:layout_constraintBottom_toTopOf="@id/text_end_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_start_date" />

        <TextView
            android:id="@+id/text_end_date"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:gravity="center|start"
            android:text="@string/pick_a_date"
            app:layout_constraintBottom_toTopOf="@id/btn_filter"
            app:layout_constraintEnd_toStartOf="@id/image_end_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_end_date" />

        <ImageView
            android:id="@+id/image_end_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_medium"
            android:src="@drawable/ic_close_black_24dp"
            app:layout_constraintBottom_toBottomOf="@id/text_end_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_end_date" />

        <Button
            android:id="@+id/btn_filter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:background="@drawable/shape_btn_send_bg"
            android:text="@string/filter"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_end_date" />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>